--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+  background-color: inherit;
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
@@ -7,7 +8,12 @@
   align-items: center;
 }
 
+.body {
+  background-color: inherit;
+}
+
 .main {
+  background-color: inherit;
   padding: 5rem 0;
   flex: 1;
   display: flex;
